feat: добавил функцию переноса цветов

--- a/index.html
+++ b/index.html
@@ -26,25 +26,30 @@
   <body>
     <div class="col">
       <h2 data-type="copy"></h2>
-      <button data-type="lock">
-        <i class="fa-solid fa-lock-open" data-type="lock"></i>
+      <button data-type="moved"><i class="fa-solid fa-arrow-right-arrow-left" data-type="moved"></i></button>
+      <button data-type="lock" id="button">
+        <i class="fa-solid fa-lock-open" data-type="lock" id="lock"></i>
       </button>
     </div>
     <div class="col">
       <h2 data-type="copy"></h2>
-      <button data-type="lock"><i class="fa-solid fa-lock-open" data-type="lock"></i></button>
+      <button data-type="moved"><i class="fa-solid fa-arrow-right-arrow-left" data-type="moved"></i></button>
+      <button data-type="lock" id="button"><i class="fa-solid fa-lock-open" data-type="lock" id="lock"></i></button>
     </div>
     <div class="col">
       <h2 data-type="copy"></h2>
-      <button data-type="lock"><i class="fa-solid fa-lock-open" data-type="lock"></i></button>
+      <button data-type="moved"><i class="fa-solid fa-arrow-right-arrow-left" data-type="moved"></i></button>
+      <button data-type="lock" id="button"><i class="fa-solid fa-lock-open" data-type="lock" id="lock"></i></button>
     </div>
     <div class="col">
       <h2 data-type="copy"></h2>
-      <button data-type="lock"><i class="fa-solid fa-lock-open" data-type="lock"></i></button>
+      <button data-type="moved"><i class="fa-solid fa-arrow-right-arrow-left" data-type="moved"></i></button>
+      <button data-type="lock" id="button"><i class="fa-solid fa-lock-open" data-type="lock" id="lock"></i></button>
     </div>
     <div class="col">
       <h2 data-type="copy"></h2>
-      <button data-type="lock"><i class="fa-solid fa-lock-open" data-type="lock"></i></button>
+      <button data-type="moved"><i class="fa-solid fa-arrow-right-arrow-left" data-type="moved"></i></button>
+      <button data-type="lock" id="button"><i class="fa-solid fa-lock-open" data-type="lock" id="lock"></i></button>
     </div>
     <script src="app.js"></script>
   </body>
